tests/baselines/reference/typeInfer1.errors.txt
tests/cases/compiler/typeInfer1.ts(11,5): error TS2322: Type '{ Moo: () => string; }' is not assignable to type 'ITextWriter2'.
  Property 'Moo' does not exist on type 'ITextWriter2'.


==== tests/cases/compiler/typeInfer1.ts (1 errors) ====
    interface ITextWriter2 {
        Write(s:string):void;
        WriteLine(s:string):void;
    }
    
    var x: ITextWriter2 = {
        Write: function (s:string):void {},
        WriteLine: function(s:string):void {}
    }
    
    var yyyyyyyy: ITextWriter2 = {
        ~~~~~~~~
!!! error TS2322: Type '{ Moo: () => string; }' is not assignable to type 'ITextWriter2'.
!!! error TS2322:   Property 'Moo' does not exist on type 'ITextWriter2'.
        Moo: function() { return "cow"; }
    }